edited about me page. fixed bug with flexbox on laptop view where tech stack would overlap

--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,7 @@ a {
 
 html {
   overflow-y: scroll;
+  scroll-behavior: smooth;
 }
 
 main {
@@ -301,15 +302,13 @@ main {
 .about__article {
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
+  align-items: space-between;
   width: 70vw;
-  height: 40vh;
 }
 .about__article__text {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 100%;
 }
 .about__article__header {
   font-size: 50px;
@@ -319,12 +318,10 @@ main {
   background: linear-gradient(#0B4284, #0B4284) padding-box, linear-gradient(#1178c3, #afb2b5) border-box;
   border: 5px solid transparent;
   border-radius: 15px;
-  overflow: hidden;
-  height: 100%;
+  width: 22vw;
 }
 .about__article__info {
   font-size: 24px;
-  height: 100%;
   padding-top: 20px;
   padding-bottom: 20px;
   padding-right: 20px;
